--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,16 @@
 __pycache__/
 *.py[cod]
 *.egg-info/
+*.so
 dist/
 build/
 venv*/
 .venv
 .env
+.Python
+.tox/
+.nox/
+.cache/
 
 # IDE
 .vscode/
@@ -19,19 +24,28 @@ venv*/
 .DS_Store
 Thumbs.db
 
-# Postgres
-*.db
-postgres_data/
-
 # Node
 node_modules/
 .next/
 out/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Pytest
 .pytest_cache/
 .coverage
+*.coverage
+htmlcov/
+coverage.xml
 
 # Environment
 .env.local
 CLAUDE.md
+
+# Logs
+*.log
+
+# Postgres (future use with volume mapping)
+postgres_data/*
+!postgres_data/.gitkeep
