--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
+    "motion": "^12.33.0",
     "next": "16.1.5",
     "react": "19.2.3",
     "react-dom": "19.2.3",
