--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,9 @@ services:
     environment:
       DATABASE_URL: postgresql+asyncpg://olympiad:olympiad@postgres:5432/olympiad
       SECRET_KEY: dev-secret-key-change-in-production
+      ALGORITHM: HS256
       ACCESS_TOKEN_EXPIRE_MINUTES: 30
+      ACCESS_TOKEN_EXPIRE_HOURS: 24
       DISCONNECT_TIMEOUT_SECONDS: 30
     depends_on:
       postgres:
