--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 fastapi==0.128.0
 uvicorn[standard]==0.31.0
+gunicorn==23.0.0
 sqlalchemy[asyncio]==2.0.46
 asyncpg==0.30.0
 alembic==1.14.1
@@ -14,3 +15,4 @@ pytest-asyncio==0.24.0
 httpx==0.28.0
 email-validator==2.2.0
 orjson==3.11.7
+python-dotenv==1.0.1
