--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,8 +22,8 @@ services:
   # FastAPI Backend
   backend:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: backend/Dockerfile
     restart: unless-stopped
     environment:
       DATABASE_URL: ${DATABASE_URL:-postgresql+asyncpg://olympiad:olympiad@postgres:5432/olympiad}
